<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0277bd">

    <ImageView
        android:id="@+id/icon_app"
        android:layout_width="42dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_app"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toRightOf="@+id/icon_app"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="15dp"
        android:background="#fafafa"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title">


        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/titulo_menu_partidos"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/cardview_dark_background"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/ic_baseline_add"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickAltas"
                android:padding="10dp"
                android:text="@string/button_altas"
                android:textAlignment="textStart"
                android:textColor="#263238"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/info_altas_partidos"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_bajas"
                android:drawableEnd="@drawable/ic_baseline_remove"
                android:drawablePadding="5dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAlignment="textStart"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#263238"
                android:onClick="onClickBajas"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/info_bajas_partidos"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_cambios"
                android:drawableEnd="@drawable/ic_baseline_rename"
                android:drawablePadding="5dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAlignment="textStart"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#263238"
                android:onClick="onClickCambios"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/info_cambios_partidos"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_resultado"
                android:drawableEnd="@drawable/ic_baseline_result"
                android:drawablePadding="5dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAlignment="textStart"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#263238"
                android:onClick="onClickResultados"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/info_resultados_partidos"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_partidos_actuales"
                android:drawableEnd="@drawable/ic_baseline_in_time"
                android:drawablePadding="5dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAlignment="textStart"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#263238"
                android:onClick="onClickResultados"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/info_partidos_actuales"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
        </ScrollView>
        <TextView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/scroll_info"
            android:textSize="13sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:drawableLeft="@drawable/ic_baseline_in"
            android:fontFamily="sans-serif-light"
            android:onClick="onClickRegresar"
            android:text="@string/button_regresar"
            android:textColor="#263238"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded,UsingOnClickInXml" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
