<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F3F4"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu"
        android:textSize="25sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:textColor="#626567"
        android:padding="20dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_equipos"
                android:maxWidth="200dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold|italic"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:backgroundTint="#34495E"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:onClick="onClickEquipos"
                tools:ignore="RtlCompat,RtlHardcoded,UsingOnClickInXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_principal_equipos"
                android:padding="10dp"
                android:textSize="15sp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                />


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_partidos"
                android:maxWidth="200dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold|italic"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:backgroundTint="#34495E"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:onClick="onClickPartidos"
                tools:ignore="RtlCompat,RtlHardcoded,UsingOnClickInXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_principal_partidos"
                android:padding="10dp"
                android:textSize="15sp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_estadisticas"
                android:maxWidth="200dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold|italic"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:backgroundTint="#34495E"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:onClick="onClickEstadisticas"
                tools:ignore="RtlCompat,RtlHardcoded,UsingOnClickInXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/info_principal_estadisticas"
                android:textSize="15sp"
                android:textStyle="bold" />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_salir"
        android:maxWidth="100dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:backgroundTint="#34495E"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:onClick="onClickSalir"
        tools:ignore="RtlHardcoded,UsingOnClickInXml" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        app:dividerColor="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        />
</LinearLayout>