<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F2F3F4"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu_partidos"
        android:textSize="25sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:textColor="#626567"
        android:padding="20dp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/altas_partido_equipo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textAutoComplete"
            android:hint="@string/nombre_equipo1"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_baseline_equipo_circle_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/altas_partido_equipo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textAutoComplete"
            android:hint="@string/nombre_equipo2"
            app:startIconDrawable="@drawable/ic_baseline_equipo_circle_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="date"
            android:hint="@string/fecha"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="time"
            android:hint="@string/tiempo"
            app:startIconDrawable="@drawable/ic_baseline_access_time_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/button_agregar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.button.MaterialButton
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/button_regresar"
        android:maxWidth="140dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@android:color/white"
        android:layout_gravity="right"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        app:dividerColor="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        />


</androidx.appcompat.widget.LinearLayoutCompat>