<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0277bd">

    <ImageView
        android:id="@+id/icon_app"
        android:layout_width="42dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_app"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toRightOf="@+id/icon_app"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="15dp"
        android:background="#fafafa"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title">


        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/titulo_menu_partidos"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/cardview_dark_background"/>

        <TextView
            android:id="@+id/tv_id_partido_cambios"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/titulo_menu_equipos"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_equipo1_cambios_partido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/tv_equipo2_cambios_partido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/asigna_fecha"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_fecha_cambios_partido"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_date"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fecha_altas_partido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/asigna_hora"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_hora_cambios_partido"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/tiempo"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_time"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hora_altas_partido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/button_actualizar_cambios"
            android:textAlignment="center"
            android:textColor="#263238"
            android:textStyle="bold"
            android:onClick="onClickRealizarCambios"
            tools:ignore="UsingOnClickInXml" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:onClick="onClickRegresar"
            android:text="@string/button_regresar"
            android:drawableLeft="@drawable/ic_baseline_in"
            android:textColor="#263238"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded,UsingOnClickInXml" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

