<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu_equipos"
        android:textSize="25sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_equipo"
            android:padding="5dp"
            android:layout_marginTop="75dp"
            app:startIconDrawable="@drawable/ic_baseline_sports_soccer_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre_equipo_altas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_agregar"
            android:maxWidth="150dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold|italic"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:backgroundTint="#34495E"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:onClick="onClickAgregar"
            tools:ignore="RtlCompat,RtlHardcoded,UsingOnClickInXml" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#34495E"
        android:fontFamily="sans-serif-light"
        android:maxWidth="140dp"
        android:text="@string/button_regresar"
        android:textColor="@color/white"

        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:onClick="onClickRegresar"
        tools:ignore="RtlHardcoded,UsingOnClickInXml" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        app:dividerColor="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>